[package]
name = "test_crate_hello_world"
version = "0.1.0"
authors = ["Jahanzaib Malik <jahanzaibmalik6@gmail.com>"]
edition = "2018"

description = "A Simple Hello World Crate"
respository = "https://github.com/jahanzaibmalik/test_crate_hello_world.git"
keywords = ["hello","world"]
license = "Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]



